nok-base/portal/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nok-apps-portal-app
  namespace: nok-base
  labels:
    app: nok-apps-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nok-apps-portal
  template:
    metadata:
      labels:
        app: nok-apps-portal
    spec:
      containers:
      - name: nok-apps-portal-container
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
        - name: portal-html-volume
          mountPath: /usr/share/nginx/html # Mount index.html
        - name: menu-config-volume
          mountPath: /usr/share/nginx/html/menu-config.json # Mount menu-config.json
          subPath: menu-config.json # Specify the key from the ConfigMap
        - name: nginx-config-volume # New volume mount for custom Nginx config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nok-portal.conf          
      volumes:
      - name: portal-html-volume
        persistentVolumeClaim:
          claimName: nok-apps-portal-pvc # Reference the ConfigMap for index.html
      - name: menu-config-volume
        configMap:
          name: nok-apps-menu-config # Reference the ConfigMap for menu-config.json
      - name: nginx-config-volume # New volume for custom Nginx config
        configMap:
          name: nok-apps-portal-nginx-config # Reference the new ConfigMap          
---
apiVersion: v1
kind: Service
metadata:
  name: nok-apps-portal-service
  namespace: nok-base
  labels:
    app: nok-apps-portal
  annotations:
    netopskube.io/bbm: "true"
    netopskube.io/prober: http
spec:
  selector:
    app: nok-apps-portal
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
