nok-base/portal/portal-gitea-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-proxy
  namespace: nok-base
spec:
  type: ExternalName
  externalName: gitea-http.nok-git.svc.cluster.local
  ports:
  - port: 3000
