nok-base/portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nok-apps-portal-ingress
  namespace: nok-base
  annotations:
    netopskube.io/bbm: "true"
    netopskube.io/prober: http
spec:
  ingressClassName: nginx
  rules:
  - host: portal.nok.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nok-apps-portal-service
            port:
              number: 80
