nok-base/portal/portal-gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-gitea-ingress
  namespace: nok-base
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-hide-headers: "X-Frame-Options"
    netopskube.io/bbm: "true"
    netopskube.io/prober: http
spec:
  ingressClassName: nginx
  rules:
  - host: portal.nok.local
    http:
      paths:
      - path: /gitea(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gitea-proxy
            port:
              number: 3000
