nok-base/portal/portal-health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-health-ingress
  namespace: nok-base
  annotations:
    netopskube.io/bbm: "true"
    netopskube.io/prober: http
    netopskube.io/scheme: http
    netopskube.io/path: /healthz

spec:
  ingressClassName: nginx

  rules:
  - host: portal.nok.local
    http:
      paths:
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: nok-apps-portal-service
            port:
              number: 80
